fix: agregue validators faltantes y nuevos tests
